update kendall_index coherence

--- a/kendall_index.ipynb
+++ b/kendall_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a342da76",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "9ff6b66f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1=[1,2,3]\n",
-    "l2=[3,2,1]\n",
-    "idx=[1,2,3]"
+    "l1=[1,2,3,4,5]\n",
+    "l2=[3,4,1,2,5]\n",
+    "idx=[1,2,3,4,5]"
    ]
   },
   {
@@ -230,8 +230,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e80a3f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def normalised_kendall_tau_distance(values1, values2):\n",
+    "    \"\"\"Compute the Kendall tau distance.\"\"\"\n",
+    "    n = len(values1)\n",
+    "    assert len(values2) == n, \"Both lists have to be of equal length\"\n",
+    "    i, j = np.meshgrid(np.arange(n), np.arange(n))\n",
+    "    a = np.argsort(values1)\n",
+    "    b = np.argsort(values2)\n",
+    "    ndisordered = np.logical_or(np.logical_and(a[i] < a[j], b[i] > b[j]), np.logical_and(a[i] > a[j], b[i] < b[j])).sum()\n",
+    "    return ndisordered / (n * (n - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6c31ebf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalised_kendall_tau_distance(l1,l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93ee5f9e",
    "metadata": {},
    "outputs": [],
    "source": []
